Website finished, ready for review

--- a/nivu_soft/index.html
+++ b/nivu_soft/index.html
@@ -1,10 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/logo_nube.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NivuSoft</title>
+    <title>NivuSoft | Desarrollo Web y Apps Personalizadas</title>
+    <meta name="description" content="Creamos páginas web, aplicaciones móviles y sistemas personalizados para empresas. Soluciones digitales seguras y escalables desde Ecuador.">
+    <meta name="keywords" content="desarrollo web, aplicaciones móviles, sistemas a medida, software Ecuador, Nivu Soft">
+    <meta name="robots" content="index, follow" />
+
+
+    <meta property="og:title" content="Nivu Soft | Expertos en desarrollo de software y apps" />
+    <meta property="og:description" content="Creamos páginas/apps webs, sistemas personalizados para empresas. Pide una demo." />
+    <meta property="og:image" content="https://nivusoftware.com/images/preview.png" />
+    <meta property="og:url" content="https://nivusoftware.com/" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
